<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informe_o_material_que_deseja"
        android:textSize="20sp"
        android:textColor="#FF808080"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rdgProdutos"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/piso_branco_baixo_brilho"
            android:id="@+id/rgbPisoBranco"
            android:checked="true"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/piso_albania"
            android:id="@+id/rdbPisoAlabnia"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/porcelanato_perlato_branco"
            android:id="@+id/rdbPorcelanato"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/revestimento_mosaico"
            android:id="@+id/rdbRevestimento"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informe_a_medida_em_m"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        android:id="@+id/edtMedida"
        android:inputType="numberDecimal"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ultra_frete_mega_rapido"
        android:id="@+id/chkFrete"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:onClick="calcular"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/r_00"
        android:id="@+id/txtResultado"
        android:textAlignment="center"
        android:textSize="24sp"/>

</LinearLayout>